src/objects/Recommendation.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for NBA/Offer in Strategy Builder</description>
        <inlineHelpText>Is this recommendation Active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beginning_Age_Range__c</fullName>
        <label>Beginning Age Range</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>For Next Best Action</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Leave field blank for no end date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ending_Age_Range__c</fullName>
        <inlineHelpText>Leave field blank for no ending age.</inlineHelpText>
        <label>Ending Age Range</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_Recommenations</fullName>
        <columns>Name</columns>
        <columns>Description</columns>
        <filterScope>Everything</filterScope>
        <label>All Recommenations</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>